tokens: fix header and overflow

--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -600,6 +600,12 @@
 	height: 100%;
 }
 
+/* ===== my tokens ===== */
+
+.tokens-wallet__count img {
+  max-height: 16px;
+}
+
 /* ===== marketplace ===== */
 
 .market-filtr__empty {
